@@ -2,6 +2,8 @@ Revision history for WebService::Idonethis
 
 {{$NEXT}}
 
+    * DOCS:     Links to github.com/pfenwick updated to github.com/pjf
+
 0.16      2013-03-22 14:16:56 Australia/Melbourne
 
     * FEATURE:  `idone` supports -V to show version number.
